force-app/main/default/objects/Exception__c/Exception__c.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <nameField>
        <displayFormat>EX-{00000000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>