force-app/main/default/objects/Exception__c/fields/Antenna_credit__c.field-meta.xml
<CustomField>
    <fullName>Antenna_credit__c</fullName>
    <label>Antenna credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>