force-app/main/default/objects/Exception__c/fields/Commercial_Add_on_Total__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Add_on_Total__c</fullName>
    <formula>Repair_Commercial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Add-on Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>