force-app/main/default/objects/Exception__c/fields/Coverage_Total__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Total__c</fullName>
    <formula>Trip_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>