force-app/main/default/objects/Exception__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Exceptionns1</relationshipName>
    <type>Lookup</type>
</CustomField>