force-app/main/default/objects/Exception__c/fields/DealerAccount__c.field-meta.xml
<CustomField>
    <fullName>DealerAccount__c</fullName>
    <formula>Service_Resource__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer</label>
    <type>Text</type>
</CustomField>