force-app/main/default/objects/Exception__c/fields/Equipment_Total__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Total__c</fullName>
    <formula>Product_Total__c +  Antenna_credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>