force-app/main/default/objects/Exception__c/fields/Installation_Issue_s__c.field-meta.xml
<CustomField>
    <fullName>Installation_Issue_s__c</fullName>
    <label>Installation Issue(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>