force-app/main/default/objects/Exception__c/fields/Is_approver_view__c.field-meta.xml
<CustomField>
    <fullName>Is_approver_view__c</fullName>
    <formula>$User.Id =  Approver__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is approver view</label>
    <type>Checkbox</type>
</CustomField>