force-app/main/default/objects/Exception__c/fields/ODU_move__c.field-meta.xml
<CustomField>
    <fullName>ODU_move__c</fullName>
    <label>ODU move</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>