force-app/main/default/objects/Exception__c/fields/Product_Total__c.field-meta.xml
<CustomField>
    <fullName>Product_Total__c</fullName>
    <label>Product Total</label>
    <summarizedField>Exception_Product__c.Price__c</summarizedField>
    <summaryForeignKey>Exception_Product__c.Exception__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>