force-app/main/default/objects/Exception__c/fields/Quality_Total__c.field-meta.xml
<CustomField>
    <fullName>Quality_Total__c</fullName>
    <formula>ODU_move__c +  Reinstall_Service_Call__c +  Reinstall_Commercial__c + Reinstall_Upgrade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>