force-app/main/default/objects/Exception__c/fields/Reinstall_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Reinstall_Commercial__c</fullName>
    <label>Reinstall Commercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>