force-app/main/default/objects/Exception__c/fields/Reinstall_Service_Call__c.field-meta.xml
<CustomField>
    <fullName>Reinstall_Service_Call__c</fullName>
    <label>Reinstall (Service Call)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>