force-app/main/default/objects/Exception__c/fields/Reinstall_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Reinstall_Upgrade__c</fullName>
    <label>Reinstall (Upgrade)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>