force-app/main/default/objects/Exception__c/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <label>Repair</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>