force-app/main/default/objects/Exception__c/fields/Repair_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Repair_Commercial__c</fullName>
    <label>Repair Commercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>