force-app/main/default/objects/Exception__c/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <formula>TEXT(Service_Resource__r.ResourceType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResourceType</label>
    <type>Text</type>
</CustomField>