force-app/main/default/objects/Exception__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>Exceptionns1</relationshipName>
    <type>Lookup</type>
</CustomField>