force-app/main/default/objects/Exception__c/fields/Service_Resource_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Account__c</fullName>
    <formula>Service_Resource__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource Account</label>
    <type>Text</type>
</CustomField>