force-app/main/default/objects/Exception__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending Dispatcher Approval</fullName>
            </value>
            <value>
                <fullName>Pending ISG Admin Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>01-New</fullName>
                <isActive>false</isActive>
                <label>01-New</label>
            </value>
            <value>
                <fullName>10-Submitted</fullName>
                <isActive>false</isActive>
                <label>10-Submitted</label>
            </value>
            <value>
                <fullName>20-Pending</fullName>
                <isActive>false</isActive>
                <label>20-Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>