force-app/main/default/objects/Exception__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>ODU_move__c  +  Antenna_credit__c + Reinstall_Service_Call__c + Reinstall_Upgrade__c + Reinstall_Commercial__c +  Repair__c +   Repair_Commercial__c  +  Trip_Fee__c +  Product_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>