force-app/main/default/objects/Exception__c/fields/Trip_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trip_Fee__c</fullName>
    <label>Trip Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>