force-app/main/default/objects/Exception__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip fees</fullName>
            </value>
            <value>
                <fullName>Repair Commercial</fullName>
            </value>
            <value>
                <fullName>Antenna credit</fullName>
            </value>
            <value>
                <fullName>ODU move</fullName>
            </value>
            <value>
                <fullName>Reinstall (Upgrade)</fullName>
            </value>
            <value>
                <fullName>Reinstall (Service Call)</fullName>
            </value>
            <value>
                <fullName>Reinstall Commercial</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Equipment credit</fullName>
            </value>
            <value>
                <fullName>Equipment Replacement</fullName>
                <isActive>false</isActive>
                <label>Equipment Replacement</label>
            </value>
            <value>
                <fullName>In warranty service calls</fullName>
                <isActive>false</isActive>
                <label>In warranty service calls</label>
            </value>
            <value>
                <fullName>Quality of work</fullName>
                <isActive>false</isActive>
                <label>Quality of work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>