force-app/main/default/objects/Exception__c/fields/Warranty_Total__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Total__c</fullName>
    <formula>Repair__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>