force-app/main/default/objects/Exception__c/fields/Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>Work_Performed__c</fullName>
    <label>Work Performed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>