force-app/main/default/objects/Exception__c/listViews/Approved_Exceptions.listView-meta.xml
<ListView>
    <fullName>Approved_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>Status__c</columns>
    <columns>DealerAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Exceptions</label>
    <sharedTo>
        <group>ISG_Admin</group>
    </sharedTo>
</ListView>