force-app/main/default/objects/Exception__c/listViews/My_Exceptions.listView-meta.xml
<ListView>
    <fullName>My_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Resource__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Exceptions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>